nohup.out

  \{^_^}/ hi!

  Loading cars.json
  Done

  Resources
  http://localhost:3000/cars

  Home
  http://localhost:3000

  Type s + enter at any time to create a snapshot of the database
  Watching...

  Error, can't read from stdin
  Creating a snapshot from the CLI won't be possible

  \{^_^}/ hi!

  Loading dedeenes.json
SyntaxError: Malformed JSON in file: dedeenes.json
Unexpected token . in JSON at position 453
    at FileAsync.parse [as deserialize] (<anonymous>)
    at /usr/local/lib/node_modules/json-server/node_modules/lowdb/adapters/FileAsync.js:41:35
[0mGET /ddns [33m404[0m 5.817 ms - 2[0m

  \{^_^}/ hi!

  Loading dedeenes.json
SyntaxError: Malformed JSON in file: dedeenes.json
Unexpected token . in JSON at position 453
    at FileAsync.parse [as deserialize] (<anonymous>)
    at /usr/local/lib/node_modules/json-server/node_modules/lowdb/adapters/FileAsync.js:41:35

  \{^_^}/ hi!

  Loading dedeenes.json
SyntaxError: Malformed JSON in file: dedeenes.json
Unexpected token . in JSON at position 453
    at FileAsync.parse [as deserialize] (<anonymous>)
    at /usr/local/lib/node_modules/json-server/node_modules/lowdb/adapters/FileAsync.js:41:35

  \{^_^}/ hi!

  Loading dedeenes.json
SyntaxError: Malformed JSON in file: dedeenes.json
Unexpected token . in JSON at position 453
    at FileAsync.parse [as deserialize] (<anonymous>)
    at /usr/local/lib/node_modules/json-server/node_modules/lowdb/adapters/FileAsync.js:41:35

  \{^_^}/ hi!

  Loading dedeenes.json
SyntaxError: Malformed JSON in file: dedeenes.json
Unexpected token . in JSON at position 453
    at FileAsync.parse [as deserialize] (<anonymous>)
    at /usr/local/lib/node_modules/json-server/node_modules/lowdb/adapters/FileAsync.js:41:35

  \{^_^}/ hi!

  Loading dedeenes.json
  Done

  Resources
  http://localhost:3000/ddns

  Home
  http://localhost:3000

  Type s + enter at any time to create a snapshot of the database
  Watching...

  Error, can't read from stdin
  Creating a snapshot from the CLI won't be possible
[0mGET /ddns [32m200[0m 12.390 ms - 418[0m
[0mGET /ddns [32m200[0m 3.604 ms - 418[0m
[0mGET /ddns [32m200[0m 3.479 ms - 418[0m
[0mPOST /ddns [32m201[0m 7.350 ms - 13[0m
[0mDELETE /ddns [33m404[0m 3.244 ms - 2[0m
[0mDELETE /ddns [33m404[0m 2.079 ms - 2[0m
[0mDELETE /ddns?_order=desc [33m404[0m 3.328 ms - 2[0m
[0mDELETE /ddns?_order=desc [33m404[0m 3.233 ms - 2[0m
  Error reading /home/gergo/python/dedeenes.json
No data, empty input at 1:1

^
  Read error has been fixed :)
  dedeenes.json has changed, reloading...

  Loading dedeenes.json
  Done

  Resources
  http://localhost:3000/ddns

  Home
  http://localhost:3000

[0mDELETE /ddns?_order=desc [33m404[0m 3.833 ms - 2[0m
[0mDELETE /ddns?_order=desc [33m404[0m 2.157 ms - 2[0m
[0mGET /ddns [32m200[0m 3.407 ms - 418[0m
[0mPOST /ddns [32m201[0m 21.399 ms - 89[0m
[0mGET /ddns [32m200[0m 2.574 ms - 521[0m
Error: Insert failed, duplicate id
    at Function.insert (/usr/local/lib/node_modules/json-server/node_modules/lodash-id/src/index.js:49:18)
    at /usr/local/lib/node_modules/json-server/node_modules/lodash/lodash.js:4430:28
    at arrayReduce (/usr/local/lib/node_modules/json-server/node_modules/lodash/lodash.js:697:21)
    at baseWrapperValue (/usr/local/lib/node_modules/json-server/node_modules/lodash/lodash.js:4429:14)
    at LodashWrapper.wrapperValue (/usr/local/lib/node_modules/json-server/node_modules/lodash/lodash.js:9114:14)
    at create (/usr/local/lib/node_modules/json-server/lib/server/router/plural.js:239:48)
    at Layer.handle [as handle_request] (/usr/local/lib/node_modules/json-server/node_modules/express/lib/router/layer.js:95:5)
    at next (/usr/local/lib/node_modules/json-server/node_modules/express/lib/router/route.js:137:13)
    at next (/usr/local/lib/node_modules/json-server/node_modules/express/lib/router/route.js:131:14)
    at Route.dispatch (/usr/local/lib/node_modules/json-server/node_modules/express/lib/router/route.js:112:3)
[0mPOST /ddns [31m500[0m 6.701 ms - -[0m
[0mPUT /ddns [33m404[0m 2.169 ms - 2[0m
[0mGET /ddns [32m200[0m 3.235 ms - 521[0m
Error: Insert failed, duplicate id
    at Function.insert (/usr/local/lib/node_modules/json-server/node_modules/lodash-id/src/index.js:49:18)
    at /usr/local/lib/node_modules/json-server/node_modules/lodash/lodash.js:4430:28
    at arrayReduce (/usr/local/lib/node_modules/json-server/node_modules/lodash/lodash.js:697:21)
    at baseWrapperValue (/usr/local/lib/node_modules/json-server/node_modules/lodash/lodash.js:4429:14)
    at LodashWrapper.wrapperValue (/usr/local/lib/node_modules/json-server/node_modules/lodash/lodash.js:9114:14)
    at create (/usr/local/lib/node_modules/json-server/lib/server/router/plural.js:239:48)
    at Layer.handle [as handle_request] (/usr/local/lib/node_modules/json-server/node_modules/express/lib/router/layer.js:95:5)
    at next (/usr/local/lib/node_modules/json-server/node_modules/express/lib/router/route.js:137:13)
    at next (/usr/local/lib/node_modules/json-server/node_modules/express/lib/router/route.js:131:14)
    at Route.dispatch (/usr/local/lib/node_modules/json-server/node_modules/express/lib/router/route.js:112:3)
[0mPOST /ddns [31m500[0m 4.318 ms - -[0m
[0mPUT /ddns [33m404[0m 3.513 ms - 2[0m
[0mGET /ddns [32m200[0m 2.219 ms - 521[0m
Error: Insert failed, duplicate id
    at Function.insert (/usr/local/lib/node_modules/json-server/node_modules/lodash-id/src/index.js:49:18)
    at /usr/local/lib/node_modules/json-server/node_modules/lodash/lodash.js:4430:28
    at arrayReduce (/usr/local/lib/node_modules/json-server/node_modules/lodash/lodash.js:697:21)
    at baseWrapperValue (/usr/local/lib/node_modules/json-server/node_modules/lodash/lodash.js:4429:14)
    at LodashWrapper.wrapperValue (/usr/local/lib/node_modules/json-server/node_modules/lodash/lodash.js:9114:14)
    at create (/usr/local/lib/node_modules/json-server/lib/server/router/plural.js:239:48)
    at Layer.handle [as handle_request] (/usr/local/lib/node_modules/json-server/node_modules/express/lib/router/layer.js:95:5)
    at next (/usr/local/lib/node_modules/json-server/node_modules/express/lib/router/route.js:137:13)
    at next (/usr/local/lib/node_modules/json-server/node_modules/express/lib/router/route.js:131:14)
    at Route.dispatch (/usr/local/lib/node_modules/json-server/node_modules/express/lib/router/route.js:112:3)
[0mPOST /ddns [31m500[0m 4.600 ms - -[0m
[0mPUT /ddns [33m404[0m 3.740 ms - 2[0m
[0mGET /ddns [32m200[0m 2.269 ms - 521[0m
Error: Insert failed, duplicate id
    at Function.insert (/usr/local/lib/node_modules/json-server/node_modules/lodash-id/src/index.js:49:18)
    at /usr/local/lib/node_modules/json-server/node_modules/lodash/lodash.js:4430:28
    at arrayReduce (/usr/local/lib/node_modules/json-server/node_modules/lodash/lodash.js:697:21)
    at baseWrapperValue (/usr/local/lib/node_modules/json-server/node_modules/lodash/lodash.js:4429:14)
    at LodashWrapper.wrapperValue (/usr/local/lib/node_modules/json-server/node_modules/lodash/lodash.js:9114:14)
    at create (/usr/local/lib/node_modules/json-server/lib/server/router/plural.js:239:48)
    at Layer.handle [as handle_request] (/usr/local/lib/node_modules/json-server/node_modules/express/lib/router/layer.js:95:5)
    at next (/usr/local/lib/node_modules/json-server/node_modules/express/lib/router/route.js:137:13)
    at next (/usr/local/lib/node_modules/json-server/node_modules/express/lib/router/route.js:131:14)
    at Route.dispatch (/usr/local/lib/node_modules/json-server/node_modules/express/lib/router/route.js:112:3)
[0mPOST /ddns [31m500[0m 4.304 ms - -[0m
[0mPUT /ddns [33m404[0m 3.500 ms - 2[0m
[0mGET /ddns [32m200[0m 3.175 ms - 521[0m
Error: Insert failed, duplicate id
    at Function.insert (/usr/local/lib/node_modules/json-server/node_modules/lodash-id/src/index.js:49:18)
    at /usr/local/lib/node_modules/json-server/node_modules/lodash/lodash.js:4430:28
    at arrayReduce (/usr/local/lib/node_modules/json-server/node_modules/lodash/lodash.js:697:21)
    at baseWrapperValue (/usr/local/lib/node_modules/json-server/node_modules/lodash/lodash.js:4429:14)
    at LodashWrapper.wrapperValue (/usr/local/lib/node_modules/json-server/node_modules/lodash/lodash.js:9114:14)
    at create (/usr/local/lib/node_modules/json-server/lib/server/router/plural.js:239:48)
    at Layer.handle [as handle_request] (/usr/local/lib/node_modules/json-server/node_modules/express/lib/router/layer.js:95:5)
    at next (/usr/local/lib/node_modules/json-server/node_modules/express/lib/router/route.js:137:13)
    at next (/usr/local/lib/node_modules/json-server/node_modules/express/lib/router/route.js:131:14)
    at Route.dispatch (/usr/local/lib/node_modules/json-server/node_modules/express/lib/router/route.js:112:3)
[0mPOST /ddns [31m500[0m 6.454 ms - -[0m
[0mPUT /ddns [33m404[0m 3.666 ms - 2[0m
[0mGET /ddns [32m200[0m 3.339 ms - 521[0m
